# Yaspem

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  arguments.py  cache.py  fetch_result.py  git_fetch.py  main.cpp  mspkg.py  packages.json  packages_parser.py  prepare_test_env.sh  progress.py  readme.md  requirements.txt  run_bdd.sh  yaspem.py
.github/workflows/: tests_bdd.yml
cmake/: mspkg.cmake  yaspem.cmake
fetcher/: git.py
generator/: cmake.py
tests/bdd/: requirements.txt
tests/bdd/features/: cmake_configure_multiple_package_lists.feature  cmake_support.feature  fetch_dependencies.feature  wrong_arguments.feature
tests/bdd/features/data/generate_cmake_multiple_package_files/: CMakeLists.txt  packages_a.json  packages_b.json
tests/bdd/features/data/generate_cmake_target/: CMakeLists.txt  packages.json
tests/bdd/features/data/multiple_packages/a/: packages.json
tests/bdd/features/data/multiple_packages/b/: packages.json
tests/bdd/features/data/package_other_version/: packages.json
tests/bdd/features/data/simple_git_packages/: CMakeLists.txt  packages.json
tests/bdd/features/steps/: cmake.py  sut.py
